tests/positive/test-success-itof.rooc
fun main()-> int{
    print_float(itof(1));
    println();
    return 0;
}