tests/negative/test-fail-return.rooc
fun main () -> int {
    print_int(1);
    return;
}